# test_repo

./: README.md
.github/workflows/: daily-alert.yml
bid-alert/: .env.example  .gitignore  README.md  app.py  requirements.txt
bid-alert/.streamlit/: config.toml  secrets.toml.example
bid-alert/docs/: PLAN.md
bid-alert/jobs/: daily_alert.py
bid-alert/pages/: 1_알림규칙.py  2_채널연결.py  3_알림이력.py
bid-alert/src/: alert_engine.py  config.py  models.py  streamlit_secrets.py
bid-alert/src/api/: kepco_client.py  narajangteo_client.py
bid-alert/src/auth/: email_policy.py  session.py  supabase_client.py
bid-alert/src/db/: repositories.py
bid-alert/src/matching/: keyword_matcher.py
bid-alert/src/notifications/: email_sender.py  kakao_sender.py  slack_sender.py
bid-alert/supabase/migrations/: 001_initial.sql
bid-alert/tests/: test_email_policy.py  test_keyword_matcher.py
younginhr/: .env.example  app.py  excel_filler.py  pdf_processor.py  pyproject.toml  requirements.txt
younginhr/sample/: 종합 경력확인서 양식.xlsx
younginmatch/: CV.xlsx  app.py  data_loader.py  matcher.py  pyproject.toml  영인에너지솔루션_실적정리.xlsx
