[project]
name = "younginhr"
version = "0.1.0"
description = "전력기술인 경력확인서 PDF → 종합 경력확인서 엑셀 자동 변환 도구"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = []
